--- a/index.html
+++ b/index.html
@@ -638,4 +638,22 @@
     });
   </script>
 </body>
+  <script>
+let deferredPrompt;
+window.addEventListener('beforeinstallprompt', (e) => {
+  e.preventDefault();
+  deferredPrompt = e;
+  const btn = document.createElement('button');
+  btn.textContent = '📱 Cài ứng dụng Nhat-CamnangVisa';
+  btn.style = 'position:fixed;bottom:20px;right:20px;padding:10px 16px;background:#4f46e5;color:white;border:none;border-radius:8px;';
+  document.body.appendChild(btn);
+  btn.addEventListener('click', async () => {
+    btn.remove();
+    deferredPrompt.prompt();
+    const { outcome } = await deferredPrompt.userChoice;
+    console.log(`User response: ${outcome}`);
+    deferredPrompt = null;
+  });
+});
+</script>
 </html>
