--- a/index.html
+++ b/index.html
@@ -1707,8 +1707,9 @@
 </div>
   </div>
   <footer class="text-center py-8 text-gray-600">
-    <p>© 2025 Nhật - Visa · Cẩm nang hồ sơ. Tất cả thông tin mang tính tham khảo, cần kiểm tra lại với chuyên viên Visa với từng nước để biết yêu cầu cụ thể chính xác cho từng trường hợp.</p>
-    <p class="text-sm mt-2">Kiểm tra yêu cầu Đại sứ quán/Lãnh sự quán trước khi nộp hồ sơ</p>
+    <p>© 2025 Nhật - Visa · Cẩm nang hồ sơ. <p>
+    <p>Tất cả thông tin mang tính tham khảo, cần kiểm tra lại với chuyên viên Visa với từng nước để biết yêu cầu cụ thể chính xác cho từng trường hợp.</p>
+    <p class="text-sm mt-2">Kiểm tra lại yêu cầu từ Đại sứ quán/Lãnh sự quán trước khi nộp hồ sơ</p>
   </footer>
   <script>
     // Menu Toggle
@@ -1885,7 +1886,7 @@ function showInstallButton() {
   const btn = document.createElement('button');
   btn.id = 'pwa-install-btn';
   btn.innerHTML = '📱 Cài ứng dụng';
-  btn.setAttribute('aria-label','Install Nhat-CamnangVisa');
+  btn.setAttribute('aria-label','Install Nhat-CamnangVisa2.1');
   btn.style.position = 'fixed';
   btn.style.right = '14px';
   btn.style.bottom = '20px';
