--- a/index.html
+++ b/index.html
@@ -1707,7 +1707,7 @@
 </div>
   </div>
   <footer class="text-center py-8 text-gray-600">
-    <p>© 2025 Nhật - Visa · Cẩm nang hồ sơ. <p>
+    <p>© 2025 Nhật - Visa · Cẩm nang hồ sơ. </p>
     <p>Tất cả thông tin mang tính tham khảo, cần kiểm tra lại với chuyên viên Visa với từng nước để biết yêu cầu cụ thể chính xác cho từng trường hợp.</p>
     <p class="text-sm mt-2">Kiểm tra lại yêu cầu từ Đại sứ quán/Lãnh sự quán trước khi nộp hồ sơ</p>
   </footer>
