--- a/index.html
+++ b/index.html
@@ -1855,9 +1855,9 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
   </script>
 <script>
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('service-worker.js').then(function(reg){
-    console.log('Service Worker registered', reg);
-  }).catch(function(err){ console.warn('SW registration failed', err); });
+  navigator.serviceWorker.register('./service-worker.js')
+  .then(() => console.log('✅ Service Worker registered successfully'))
+  .catch(err => console.error('❌ Service Worker registration failed:', err));
 }
 
 let deferredPrompt;
